Add server module